load("//tools:defaults.bzl", "ts_library")

package(default_visibility = ["//.github/actions/deploy-docs-site:__subpackages__"])

exports_files([
    "main.ts",
])

ts_library(
    name = "lib",
    srcs = glob(
        ["*.ts"],
    ),
    deps = [
        "@npm//@actions/core",
        "@npm//@actions/github",
        "@npm//@angular/ng-dev",
        "@npm//@types/node",
        "@npm//@types/tmp",
        "@npm//tmp",
        "@npm//undici",
    ],
)
